--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
+    "vue-carousel": "^0.18.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vue2-smooth-scroll": "^1.6.0",
